markup + pdf invoice + russian post plugin

--- a/src/Presentation/Nop.Web/ErrorPage.htm
+++ b/src/Presentation/Nop.Web/ErrorPage.htm
@@ -1,42 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Error</title>
+    <title>Ошибка</title>
 </head>
 <body>
     <div align="center">
-
-        <!-- implement as you like
-    <br /><br />
-    <a href="http://www.yourdomain.com">
-    <img src="http://www.yourdomain.com/content/images/error-page-logo.jpg" style="border:none;" alt="logo" />
-    </a>
--->
-
         <br />
         <br />
         <p style="font-size: 16pt; font-weight: bold;">
-            We're sorry, an internal error occurred.
+            Какая досада! У нас что-то поломалось :(
         </p>
         <p style="font-size: 14pt;">
-            Our supporting staff has been notified of this error and will address the issue shortly.<br />
+            Данная проблема будет передана администратору и мы всё поправим<br />
             <br />
-            We  apologize for the inconvenience.<br />
+            Приносим свои извинения за неудобства<br />
             <br />
-            Please try clicking your browsers 'back' button or try reloading the home page.
+            Попробуйте нажать кнопку "Назад" в вашем браузере или перезагрузить страницу
 
-            <!-- implement as you like
-        <br /><br />
-        <a href="http://www.yourdomain.com">http://yourdomain.com</a>
--->
             <br />
             <br />
-            If you continue to receive this message, please try again in a little while.
+            Если это сообщение по-прежнему вас беспокоит, попробуйте еще раз немного позднее или сообщите нам на email: support@zelectro.cc
         <br />
             <br />
-            Thank you for your patience.
+            Спасибо за понимание
         </p>
-
     </div>
 </body>
 </html>
