--- a/src/Presentation/Nop.Web/FileNotFound.htm
+++ b/src/Presentation/Nop.Web/FileNotFound.htm
@@ -5,35 +5,22 @@
 </head>
 <body>
     <div align="center">
-        <!-- implement as you like  
-    <br /><br />
-    <a href="http://www.yourdomain.com">
-    <img src="http://www.yourdomain.com/content/images/error-page-logo.jpg" style="border:none;" alt="logo" />
-    </a>
--->
-
         <br />
         <br />
         <div style="font-size: 16pt; font-weight: bold;">
-            Page not found
+            Страница не найдена
         </div>
         <p style="font-size: 14pt;">
-            We're sorry, we can't find that page.
+            Извините, но у нас нет такой страницы.
             <br />
-            It's possible you typed the address incorrectly or that the page you were
-            <br />
-            looking for has been moved or no longer exists. 
+            Возможно вы неправильно ввели адрес или эта страница переехала или была удалена.
         </p>
         <p style="font-size: 14pt;">
-            Please go to our home page and try again. 
+            Пожалуйста, вернитесь на главную и попробуйте снова. 
         </p>
 
-        <!-- implement as you like        
-            <br /><br />
-            <a href="http://www.yourdomain.com">http://www.yourdomain.com</a>
-            -->
         <p style="font-size: 14pt;">
-            Thank you for your patience. 
+            Спасибо. 
         </p>
     </div>
 </body>
